--- a/gateway/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/gateway/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -40,6 +40,12 @@
                             <span jhiTranslate="global.menu.entities.businessUnit">Business Unit</span>
                         </a>
                     </li>
+                    <li uiSrefActive="active">
+                        <a class="dropdown-item" routerLink="ir-model" (click)="collapseNavbar()">
+                            <i class="fa fa-fw fa-asterisk" aria-hidden="true"></i>
+                            <span jhiTranslate="global.menu.entities.irModel">Ir Model</span>
+                        </a>
+                    </li>
                     <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                 </ul>
             </li>
